--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/1404/1404945.png" />
+    <link rel="icon" type="image/svg+xml" href="/computer.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza Cat</title>
+    <title>Welcome</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
